--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
               <li class="project-item">
                 <span class="project"
                   ><a
+                    class="link-ref"
                     target="_blank"
                     href="https://www.facebook.com/profile.php?id=100001701447865"
                     >www.facebook.com</a
                   >
                   ...............................................................
                   <span class="project-bracket">[</span>
-                  <svg class="icon-form-email" width="18" height="18">
+                  <svg class="icon-link" width="18" height="18">
                     <use href="./img/icons.svg#icon-facebook2"></use>
                   </svg>
                   <span class="project-bracket">]</span>
@@ -57,14 +58,15 @@
               <li class="project-item">
                 <span class="project"
                   ><a
+                    class="link-ref"
                     target="_blank"
-                    href="https://www.instagram.com/gordienko191/"
-                    >www.instagram.com</a
+                    href="https://github.com/MykhailoHordiienko"
+                    >www.github.com</a
                   >
                   ............................................................
                   <span class="project-bracket">[</span>
-                  <svg class="icon-form-email" width="18" height="18">
-                    <use href="./img/icons.svg#icon-instagram"></use>
+                  <svg class="icon-link" width="18" height="18">
+                    <use href="./img/icons.svg#icon-github"></use>
                   </svg>
                   <span class="project-bracket">]</span></span
                 >
@@ -72,13 +74,14 @@
               <li class="project-item">
                 <span class="project"
                   ><a
+                    class="link-ref"
                     target="_blank"
                     href="https://www.linkedin.com/in/michael-gordienko-111668a8/"
                     >www.linkedin.com</a
                   >
                   .................................................................
                   <span class="project-bracket">[</span>
-                  <svg class="icon-form-email" width="18" height="18">
+                  <svg class="icon-link" width="18" height="18">
                     <use href="./img/icons.svg#icon-linkedin2"></use>
                   </svg>
                   <span class="project-bracket">]</span></span
