--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume</title>
+    <title>HordiienkoMykhailo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -180,16 +180,62 @@
           <div>
             <p>
               <span class="contact-type">C:</span>
-              <a href="tel:+77777777777" class="contact-link"
-                >+7 777 777 77 77</a
+              <a href="tel:+380986765299" class="contact-link"
+                >+38 098 676 52 99</a
               >
             </p>
             <p>
               <span class="contact-type">E:</span>
-              <a href="mailto:chornyiav@gmail.com" class="contact-link"
-                >chornyiav@gmail.com</a
+              <a
+                href="mailto:gordienkomichael191@gmail.com"
+                class="contact-link"
+                >gordienkomichael191@gmail.com</a
               >
             </p>
+            <ul class="media-list">
+              <li class="media-item">
+                <span class="media"
+                  ><a
+                    target="_blank"
+                    href="https://www.linkedin.com/in/mykhailo-hordiienko-111668a8"
+                    >www.linkedin.com</a
+                  >
+                  <span class="media-bracket">[</span>
+                  <svg class="media-icon-link" width="18" height="18">
+                    <use href="./img/icons.svg#icon-linkedin2"></use>
+                  </svg>
+                  <span class="media-bracket">]</span>
+                </span>
+              </li>
+              <li class="media-item">
+                <span class="media"
+                  ><a
+                    target="_blank"
+                    href="https://github.com/MykhailoHordiienko"
+                    >www.github.com</a
+                  >
+                  <span class="media-bracket">[</span>
+                  <svg class="media-icon-link" width="18" height="18">
+                    <use href="./img/icons.svg#icon-github"></use>
+                  </svg>
+                  <span class="media-bracket">]</span></span
+                >
+              </li>
+              <li class="media-item">
+                <span class="media"
+                  ><a
+                    target="_blank"
+                    href="https://www.facebook.com/profile.php?id=100001701447865"
+                    >www.facebook.com</a
+                  >
+                  <span class="media-bracket">[</span>
+                  <svg class="media-icon-link" width="18" height="18">
+                    <use href="./img/icons.svg#icon-facebook2"></use>
+                  </svg>
+                  <span class="media-bracket">]</span>
+                </span>
+              </li>
+            </ul>
           </div>
         </div>
         <!-- Tech Skills -->
