--- a/index.html
+++ b/index.html
@@ -194,46 +194,38 @@
             </p>
             <ul class="media-list">
               <li class="media-item">
-                <span class="media"
-                  ><a
-                    target="_blank"
-                    href="https://www.linkedin.com/in/mykhailo-hordiienko-111668a8"
-                    >www.linkedin.com</a
-                  >
-                  <span class="media-bracket">[</span>
-                  <svg class="media-icon-link" width="18" height="18">
-                    <use href="./img/icons.svg#icon-linkedin2"></use>
-                  </svg>
-                  <span class="media-bracket">]</span>
-                </span>
-              </li>
-              <li class="media-item">
-                <span class="media"
-                  ><a
-                    target="_blank"
-                    href="https://github.com/MykhailoHordiienko"
-                    >www.github.com</a
-                  >
-                  <span class="media-bracket">[</span>
-                  <svg class="media-icon-link" width="18" height="18">
-                    <use href="./img/icons.svg#icon-github"></use>
-                  </svg>
-                  <span class="media-bracket">]</span></span
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/mykhailo-hordiienko-111668a8"
+                  >www.linkedin.com</a
                 >
+                <span class="media-bracket">[</span>
+                <svg class="media-icon-link" width="18" height="18">
+                  <use href="./img/icons.svg#icon-linkedin2"></use>
+                </svg>
+                <span class="media-bracket">]</span>
               </li>
               <li class="media-item">
-                <span class="media"
-                  ><a
-                    target="_blank"
-                    href="https://www.facebook.com/profile.php?id=100001701447865"
-                    >www.facebook.com</a
-                  >
-                  <span class="media-bracket">[</span>
-                  <svg class="media-icon-link" width="18" height="18">
-                    <use href="./img/icons.svg#icon-facebook2"></use>
-                  </svg>
-                  <span class="media-bracket">]</span>
-                </span>
+                <a target="_blank" href="https://github.com/MykhailoHordiienko"
+                  >www.github.com</a
+                >
+                <span class="media-bracket">[</span>
+                <svg class="media-icon-link" width="18" height="18">
+                  <use href="./img/icons.svg#icon-github"></use>
+                </svg>
+                <span class="media-bracket">]</span>
+              </li>
+              <li class="media-item">
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/profile.php?id=100001701447865"
+                  >www.facebook.com</a
+                >
+                <span class="media-bracket">[</span>
+                <svg class="media-icon-link" width="18" height="18">
+                  <use href="./img/icons.svg#icon-facebook2"></use>
+                </svg>
+                <span class="media-bracket">]</span>
               </li>
             </ul>
           </div>
