--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <body>
     <!--Main-->
     <div class="main">
-      <div>
         <!--Main Content-->
         <div class="main-content">
           <!--About user-->
@@ -40,52 +39,39 @@
 
             <ol class="project-list">
               <li class="project-item">
-                <span class="project"
-                  ><a
-                    class="link-ref"
-                    target="_blank"
-                    href="https://www.linkedin.com/in/mykhailo-hordiienko-111668a8"
-                    >www.linkedin.com</a
-                  >
-                  .................................................................
-                  <span class="project-bracket">[</span>
-                  <svg class="icon-link" width="18" height="18">
-                    <use href="./img/icons.svg#icon-linkedin2"></use>
-                  </svg>
-                  <span class="project-bracket">]</span></span
+                <a
+                  class="link-ref"
+                  target="_blank"
+                  href="https://mykhailohordiienko.github.io/Ice-Cream/"
+                  >Ice-Cream</a
                 >
+                <p class="about-description">
+                  Ice Cream company site. Neat and tasty design, responsible
+                  layout. Using Parcel, SCSS, JS
+                </p>
               </li>
               <li class="project-item">
-                <span class="project"
-                  ><a
-                    class="link-ref"
-                    target="_blank"
-                    href="https://github.com/MykhailoHordiienko"
-                    >www.github.com</a
-                  >
-                  ............................................................
-                  <span class="project-bracket">[</span>
-                  <svg class="icon-link" width="18" height="18">
-                    <use href="./img/icons.svg#icon-github"></use>
-                  </svg>
-                  <span class="project-bracket">]</span></span
+                <a
+                  class="link-ref"
+                  target="_blank"
+                  href="https://mykhailohordiienko.github.io/goit-markup-hw-08/index.html"
+                  >Web-Studio</a
                 >
+                <p class="about-description">
+                  Web Studio company site. Project width responsible layout and
+                  CSS animation. Using SCSS, JS
+                </p>
               </li>
               <li class="project-item">
-                <span class="project"
-                  ><a
-                    class="link-ref"
-                    target="_blank"
-                    href="https://www.facebook.com/profile.php?id=100001701447865"
-                    >www.facebook.com</a
-                  >
-                  ...............................................................
-                  <span class="project-bracket">[</span>
-                  <svg class="icon-link" width="18" height="18">
-                    <use href="./img/icons.svg#icon-facebook2"></use>
-                  </svg>
-                  <span class="project-bracket">]</span>
-                </span>
+                <a
+                  class="link-ref"
+                  target="_blank"
+                  href="https://mykhailohordiienko.github.io/BarberShop/"
+                  >Barber-Shop</a
+                >
+                <p class="about-description">
+                  Landing page for Barber-Shop. Using CSS, JS
+                </p>
               </li>
             </ol>
           </div>
@@ -95,7 +81,7 @@
             <!--Company1-->
             <div>
               <h4 class="work-position">
-                Front-End Developer <span class="organization">Freelance</span>
+                Event Manager <span class="organization">NSC Olimpiyskiy LLC "OCSS"</span>
               </h4>
               <p class="period">
                 September 2019 - up to now <span class="line">|</span> Country
@@ -115,44 +101,7 @@
                 </li>
               </ul>
             </div>
-            <!--Company2-->
-            <div>
-              <h4 class="work-position">
-                Manager <span class="organization">Roga & Kopyta New</span>
-              </h4>
-              <p class="period">
-                March 2015 - October 2018 <span class="line">|</span> Country
-              </p>
-              <ul class="work-list">
-                <li class="work-list-item">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod labore et dolore magna aliqua.
-                </li>
-                <li class="work-list-item">
-                  Quis ipsum suspendisse ultrices gravida.
-                </li>
-                <li class="work-list-item">Risus commodo viverra maecenas.</li>
-              </ul>
-            </div>
-            <!--Company3-->
-            <div>
-              <h4 class="work-position">
-                Manager <span class="organization">Roga & Kopyta LLC</span>
-              </h4>
-              <p class="period">
-                June 2014 - February 2015 <span class="line">|</span> Country
-              </p>
-              <ul class="work-list">
-                <li class="work-list-item">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li class="work-list-item">
-                  Quis ipsum suspendisse ultrices gravida.
-                </li>
-                <li class="work-list-item">Risus commodo viverra maecenas.</li>
-              </ul>
-            </div>
-          </div>
+            
           <!-- Education -->
           <div class="education">
             <h3 class="title">Education</h3>
@@ -276,7 +225,6 @@
           </ul>
         </div>
       </aside>
-    </div>
   </body>
   <!-- Project Done -->
 </html>
