--- a/index.html
+++ b/index.html
@@ -84,20 +84,18 @@
                 Event Manager <span class="organization">NSC Olimpiyskiy LLC "OCSS"</span>
               </h4>
               <p class="period">
-                September 2019 - up to now <span class="line">|</span> Country
+                January 2017 - January 2023 <span class="line">|</span> Kyiv
               </p>
               <ul class="work-list">
                 <li class="work-list-item">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Successful implementation of projects for 85,000 people.
                 </li>
                 <li class="work-list-item">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Calculation and analysis of upcoming and past events.
                 </li>
-                <li class="work-list-item">Risus commodo viverra maecenas.</li>
+                <li class="work-list-item">Communication with suppliers - documentation.</li>
                 <li class="work-list-item">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod.
+                  Selection-Control- Training of personnel (from 50 to 250 people).
                 </li>
               </ul>
             </div>
@@ -106,11 +104,18 @@
           <div class="education">
             <h3 class="title">Education</h3>
             <h4 class="name-university">
-              National University of Radioelectronics
+              IT School GoIT
             </h4>
-            <h5 class="managment">Management</h5>
+            <h5 class="managment">Full Stack Developer</h5>
             <p class="period">
-              September 2009 - June 2014 <span class="line">|</span> Country
+              May 2022 - March 2023 <span class="line">|</span> Kyiv
+            </p>
+            <h4 class="name-university">
+              Fkisit Dvnz "Kneu Im. V. Hetʹmana"
+            </h4>
+            <h5 class="managment">Operation of information processing and decision-making systems</h5>
+            <p class="period">
+              September 2008 - May 2012 <span class="line">|</span> Kyiv
             </p>
           </div>
         </div>
@@ -190,6 +195,12 @@
               <span class="tech-skills-tex">CSS3</span>
             </li>
             <li class="tech-skills-item">
+              <span class="tech-skills-tex">SASS</span>
+            </li>
+              <li class="tech-skills-item">
+              <span class="tech-skills-tex">Parcel</span>
+            </li>
+              <li class="tech-skills-item">
               <span class="tech-skills-tex">GIT</span>
             </li>
             <li class="tech-skills-item">
@@ -197,6 +208,9 @@
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-tex">JavaScript</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-tex">React Native</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-tex">React.js</span>
