--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <div class="main-content">
           <!--About user-->
           <div class="about">
-            <h2 class="about-position">Full Stack Developer</h2>
+            <h2 class="about-position">Front-End Developer</h2>
 
             <h1 class="about-name">Mykhailo Hordiienko</h1>
 
             <p class="about-description">
               I am a Junior Front-End developer. I focus on HTML5, CSS3, JS,
-              Node.JS, React. English - Intermediate. Looking for a remote job.
+              Node.JS, React. English - Intermediate, Ukrainian - native. Looking for a remote job.
               Development, practice and work for the result are important for
               me. I intend to develop innovative technologies and deliver value
               to people.
