--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <p class="about-description">
               I am a Junior Front-End developer. I focus on HTML5, CSS3, JS,
-              Node.JS, React. English - Intermediate, Ukrainian - native. Looking for a remote job.
+              Node.JS, React. English - Upper-intermediate, Ukrainian - native. Looking for a remote job.
               Development, practice and work for the result are important for
               me. I intend to develop innovative technologies and deliver value
               to people.
